# EssenceExtractor

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/: CONTRIBUTING.md  STYLEGUIDE.md
.github/workflows/: ci.yml
docs/source/: blog_generator.rst  blog_media_enhancer.rst  conf.py  cost_management.rst  downloader.rst  index.rst  transcriber.rst
essence-extractor/: main.py
essence-extractor/src/: transcriber.py
essence-extractor/src/data_models/: llm_model.py
essence_extractor/: __init__.py  main.py
essence_extractor/src/: __init__.py  blog_media_enhancer.py  cost_management.py  downloader.py  transcriber.py
essence_extractor/src/data_models/: llm_model.py
examples/: README.md  example.md  example_transcript.txt
src/: __init__.py  blog_generator.py  blog_media_enhancer.py  cost_management.py  downloader.py  image_extractor.py  transcriber.py  utils.py
src/data_models/: __init__.py  file_path_model.py  llm_model.py  youtube_url_model.py
src/utils/: __init__.py  custom_exceptions.py
tests/: conftest.py  test_blog_generator.py  test_blog_media_enhancer.py  test_cost_management.py  test_downloader.py  test_transcriber.py
tests/data_models/: test_youtube_url_model.py
